Added logic to '/js/form-validator-view-listing-unit-occupied.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/view-listing-unit-occupied.html
+++ b/BeginnersPad v2/beginner/view-listing-unit-occupied.html
@@ -241,6 +241,7 @@
     </div>
     
     <script src="../js/nav-drawer.js"></script>
+    <script src="/js/form-validator-view-listing-unit-occupied.js"></script>
     <script src="../js/css-base.js"></script>
 </body>
 </html>
