Changed all references of '/view-ticket-user.html' in '/beginner/view-tickets.html' to '/beginner/view-ticket.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/view-tickets.html
+++ b/BeginnersPad v2/beginner/view-tickets.html
@@ -85,7 +85,7 @@
                             debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
                             asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                             voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                            <a href="/view-ticket-user.html">View ticket <i class="fas fa-chevron-right"></i></a>
+                            <a href="/beginner/view-ticket.html">View ticket <i class="fas fa-chevron-right"></i></a>
                         </div>
                         <div class="item item-bottom-border">
                             <h4>Ticket #0</h4>
@@ -101,7 +101,7 @@
                             debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
                             asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                             voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                            <a href="/view-ticket-user.html">View ticket <i class="fas fa-chevron-right"></i></a>
+                            <a href="/beginner/view-ticket.html">View ticket <i class="fas fa-chevron-right"></i></a>
                         </div>
                         <div class="item item-bottom-border">
                             <h4>Ticket #0</h4>
@@ -117,7 +117,7 @@
                             debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
                             asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                             voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                            <a href="/view-ticket-user.html">View ticket <i class="fas fa-chevron-right"></i></a>
+                            <a href="/beginner/view-ticket.html">View ticket <i class="fas fa-chevron-right"></i></a>
                         </div>
                         <div class="item item-bottom-border">
                             <h4>Ticket #0</h4>
@@ -133,7 +133,7 @@
                             debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
                             asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                             voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                            <a href="/view-ticket-user.html">View ticket <i class="fas fa-chevron-right"></i></a>
+                            <a href="/beginner/view-ticket.html">View ticket <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
