--- a/BeginnersPad v2/beginner/view-tickets.html
+++ b/BeginnersPad v2/beginner/view-tickets.html
@@ -54,13 +54,13 @@
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
-                <li><a href="/beginner/view-tickets.html">My tickets</a></li>
+                <li class="selected"><a href="/beginner/view-tickets.html">My tickets</a></li>
             </ul>
         </div>
         <div class="nav-drawer-category">
             <p>Premium</p>
             <ul>
-                <li class="selected"><a href="/beginner/waiting-list.html">Waiting list <i class="fas fa-star"></i></a></li>
+                <li><a href="/beginner/waiting-list.html">Waiting list <i class="fas fa-star"></i></a></li>
             </ul>
         </div>
     </div>
