Added 'tour appointments' entry to '.nav-drawer' in all HTML files in '/beginner/' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/view-listings.html
+++ b/BeginnersPad v2/beginner/view-listings.html
@@ -51,6 +51,7 @@
             <ul>
                 <li><a href="/beginner/dashboard.html">Dashboard</a></li>
                 <li class="selected"><a href="/beginner/view-listings.html">Listings</a></li>
+                <li><a href="/beginner/tour-appointments.html">Tour appointments</a></li>
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
