--- a/BeginnersPad v2/lister/favourites.html
+++ b/BeginnersPad v2/lister/favourites.html
@@ -55,7 +55,7 @@
                 <li class="selected"><a href="/lister/favourites.html">Favourites</a></li>
                 <li><a href="/lister/view-beginner-applications.html">Beginner applications</a></li>
                 <li><a href="/lister/view-property-applications.html">My listing applications</a></li>
-                <li><a href="/view-tickets-user.html">My tickets</a></li>
+                <li><a href="/lister/view-tickets.html">My tickets</a></li>
                 <li><a href="/lister/banned-users.html">Banned users</a></li>
             </ul>
         </div>
