--- a/BeginnersPad v2/lister/view-tickets.html
+++ b/BeginnersPad v2/lister/view-tickets.html
@@ -49,13 +49,13 @@
         <div class="nav-drawer-category">
             <p>Menu</p>
             <ul>
-                <li class="selected"><a href="/lister/dashboard.html">Dashboard</a></li>
+                <li><a href="/lister/dashboard.html">Dashboard</a></li>
                 <li><a href="/view-listings.html">Listings</a></li>
                 <li><a href="/lister/my-listings.html">My listings</a></li>
                 <li><a href="/lister/favourites.html">Favourites</a></li>
                 <li><a href="/lister/view-beginner-applications.html">Beginner applications</a></li>
                 <li><a href="/lister/view-property-applications.html">My listing applications</a></li>
-                <li><a href="/lister/view-tickets.html">My tickets</a></li>
+                <li class="selected"><a href="/lister/view-tickets.html">My tickets</a></li>
                 <li><a href="/lister/banned-users.html">Banned users</a></li>
             </ul>
         </div>
