Added 'Add listing .fab' with '#modalTrigger' to '/lister/my-listings.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/my-listings.html
+++ b/BeginnersPad v2/lister/my-listings.html
@@ -61,6 +61,10 @@
         </div>
     </div>
 
+    <div class="fab-container">
+        <button class="fab btn-primary" id="modalTrigger"><i class="fas fa-plus"></i> Add listing</button>
+    </div>
+
     <!-- Search bar -->
     <section id="search-bar">
         <div class="container">
