Added logic to '/js/form-validator-view-my-listing.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-my-listing.html
+++ b/BeginnersPad v2/lister/view-my-listing.html
@@ -576,6 +576,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
     <script src="/js/charts.js"></script>
     <script src="/js/nav-drawer.js"></script>
+    <script src="/js/form-validator-view-my-listing.js"></script>
     <script src="/js/css-base.js"></script>
     <script src="/js/modals-view-my-listing.js"></script>
 </body>
