Added 'href' to '#btnCreateUnit' in 'lister/view-my-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-my-listing.html
+++ b/BeginnersPad v2/lister/view-my-listing.html
@@ -552,7 +552,7 @@
                         <label for="name">Unit name*</label>
                         <input type="text" name="name" id="name">
                     </div>
-                    <input class="btn btn-submit" type="button" value="Create" onclick="init();">
+                    <input id="btnCreateUnit" class="btn btn-submit" type="button" value="Create" onclick="init();">
                 </form>
             </div>
         </div>
