Added modals and 'upload image' buttons to '/lister/manage-listing-unit.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-zones.html
+++ b/BeginnersPad v2/admin/manage-zones.html
@@ -247,7 +247,7 @@
                     </div>
                     <div class="form-group" id="grpCounty">
                         <label for="county">County*</label>
-                        <input type="county" name="county" id="county">
+                        <input type="text" name="county" id="county">
                     </div>
                     <div class="form-group" id="grpLat">
                         <label for="latitude">Latitude</label>
