Added logic to '/js/modals-manage-listing-unit.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/manage-listing-unit.html
+++ b/BeginnersPad v2/lister/manage-listing-unit.html
@@ -327,6 +327,8 @@
     <script src="/js/maps-view-listing.js"></script>
     <!-- <script src="/js/popup.js"></script> -->
     <script src="/js/nav-drawer.js"></script>
+    <script src="/js/form-validator-manage-listing-unit.js"></script>
     <script src="/js/css-base.js"></script>
+    <script src="/js/modals-manage-listing-unit.js"></script>
 </body>
 </html>
