--- a/BeginnersPad v2/lister/manage-listing-unit.html
+++ b/BeginnersPad v2/lister/manage-listing-unit.html
@@ -265,7 +265,7 @@
                         <label for="description">Description*</label>
                         <textarea name="description" id="description" cols="30" rows="10"></textarea>
                     </div>
-                    <input class="btn btn-submit" type="button" value="Update" onclick="init();">
+                    <input class="btn btn-submit" type="button" value="Update" onclick="initUnit();">
                 </form>
             </div>
         </div>
@@ -286,7 +286,7 @@
                         <label for="features">Features (seperate each item with a semicolon)</label>
                         <textarea name="features" id="features" cols="30" rows="10"></textarea>
                     </div>
-                    <input class="btn btn-submit" type="button" value="Update" onclick="init();">
+                    <input class="btn btn-submit" type="button" value="Update" onclick="initFeatures();">
                 </form>
             </div>
         </div>
@@ -307,7 +307,7 @@
                         <label for="disclaimer">Disclaimer (seperate each item with a semicolon)</label>
                         <textarea name="disclaimer" id="disclaimer" cols="30" rows="10"></textarea>
                     </div>
-                    <input class="btn btn-submit" type="button" value="Update" onclick="init();">
+                    <input class="btn btn-submit" type="button" value="Update" onclick="initDisclaimer();">
                 </form>
             </div>
         </div>
