--- a/BeginnersPad v2/lister/my-listings.html
+++ b/BeginnersPad v2/lister/my-listings.html
@@ -346,39 +346,10 @@
             <div class="category">
                 <form id="formCreateListing">
                     <div class="form-group" id="grpName">
-                        <label for="name">Sub-zone name*</label>
+                        <label for="name">Listing name*</label>
                         <input type="text" name="name" id="name">
                     </div>
-                    <div class="form-group" id="grpRole">
-                        <label for="role">Role/nature of sub-zone*</label>
-                        <select name="role" id="role">
-                            <option value="" selected>--select role--</option>
-                            <option value="1">Residential</option>
-                            <option value="2">Commercial</option>
-                            <option value="3">Industrial</option>
-                            <option value="4">Other</option>
-                        </select>
-                    </div>
-                    <div class="form-group" id="grpLat">
-                        <label for="latitude">Latitude</label>
-                        <input type="number" name="latitude" id="latitude">
-                    </div>
-                    <div class="form-group" id="grpLong">
-                        <label for="longitude">Longitude</label>
-                        <input type="number" name="longitude" id="longitude">
-                    </div>
-                    <div class="form-group" id="zoneMap" style="height: 300px;margin: 15px 0;">
-                        <div id="map2" style="height: 100%;"></div>
-                    </div>
-                    <div class="form-group" id="grpRadius">
-                        <label for="radius">Radius (km)</label>
-                        <input type="number" name="radius" id="radius">
-                    </div>
-                    <div class="form-group" id="grpTimezone">
-                        <label for="timezone">Timezone</label>
-                        <input type="text" name="timezone" id="timezone">
-                    </div>
-                    <input class="btn btn-submit" type="button" value="Create" onclick="init();">
+                    <input id="btnCreateListing" class="btn btn-submit" type="button" value="Create" onclick="init();">
                 </form>
             </div>
         </div>
