Added logic to '/js/form-validator-my-listings.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/my-listings.html
+++ b/BeginnersPad v2/lister/my-listings.html
@@ -360,6 +360,7 @@
 
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/search-bar-scroll.js"></script>
+    <script src="/js/form-validator-my-listings.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
 </html>
