--- a/BeginnersPad v2/lister/manage-listing.html
+++ b/BeginnersPad v2/lister/manage-listing.html
@@ -66,7 +66,10 @@
             <div class="title-grp">
                 <h3>Images</h3>
                 <div class="info-actions">
-                    <i id="popupToggle" class="fas fa-plus"></i>
+                    <i id="btnImgFaux" class="fas fa-plus"></i>
+                    <form action="">
+                        <input class="file-path-wrapper" accept="image/*" name="btn_submit" id="btnImgReal" type="file" style="display: none;"/>
+                    </form>
                 </div>
             </div>
             <div class="image-grp">
@@ -106,7 +109,10 @@
             <div class="title-grp">
                 <h3>Thumbnail</h3>
                 <div class="info-actions">
-                    <i class="fas fa-plus"></i>
+                    <i id="btnThumbFaux" class="fas fa-plus"></i>
+                    <form action="">
+                        <input class="file-path-wrapper" accept="image/*" name="btn_submit" id="btnThumbReal" type="file" style="display: none;"/>
+                    </form>
                 </div>
             </div>
             <div class="image-grp">
@@ -336,14 +342,60 @@
         </div>
     </section>
 
-    <!-- Modals -->
-    <div class="popup popup-md closed" id="popupDemo">
-        <div class="popup-wrapper">
-            <h3>Modal demo</h3>
-            <button id="popupClose" class="btn-link btn-popup-close"><i class="fas fa-times"></i></button>
+    <div class="modal" id="modal1">
+        <div class="modal-header">
+            <h2>Edit listing info</h2>
+            <button id="modalHeaderClose1" class="btn-link btn-close"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-content">
+            <div class="category">
+                <form id="formUpdateListing">
+                    <div class="form-group" id="grpName">
+                        <label for="name">Listing name*</label>
+                        <input type="text" name="name" id="name">
+                    </div>
+                    <div class="form-group" id="grpDescription">
+                        <label for="description">Description*</label>
+                        <textarea name="description" id="description" cols="30" rows="10"></textarea>
+                    </div>
+                    <input class="btn btn-submit" type="button" value="Update" onclick="initListing();">
+                </form>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button id="modalFooterClose1" class="btn btn-link">Close</button>
+        </div>
+    </div>
+
+    <div class="modal" id="modal2">
+        <div class="modal-header">
+            <h2>Communial features</h2>
+            <button id="modalHeaderClose2" class="btn-link btn-close"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-content">
+            <div class="category">
+                <form id="formUpdateListingFeatures">
+                    <div class="form-group" id="grpFeatures">
+                        <label for="features">Features (seperate each item with a semicolon)</label>
+                        <textarea name="features" id="features" cols="30" rows="10"></textarea>
+                    </div>
+                    <input class="btn btn-submit" type="button" value="Update" onclick="initFeatures();">
+                </form>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button id="modalFooterClose2" class="btn btn-link">Close</button>
         </div>
     </div>
     
+    <script>
+        document.querySelector('#btnImgFaux').addEventListener('click',function() {
+            document.querySelector('#btnImgReal').click();
+        });
+        document.querySelector('#btnThumbFaux').addEventListener('click',function() {
+            document.querySelector('#btnThumbReal').click();
+        });
+    </script>
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initMap">
     </script>
