Added logic to '/js/modals-manage-listing.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/manage-listing.html
+++ b/BeginnersPad v2/lister/manage-listing.html
@@ -131,7 +131,7 @@
                 <div class="info-name">
                     <h1 class="name">Name</h1>
                     <div class="info-actions">
-                        <i class="fas fa-edit"></i>
+                        <i id="modalTrigger1" class="fas fa-edit"></i>
                     </div>
                 </div>
                 <p class="location">Location, Location, Location</p>
@@ -308,7 +308,7 @@
                         <div class="title-grp">
                             <h3>Communial features</h3>
                             <div class="info-actions">
-                                <i class="fas fa-edit"></i>
+                                <i id="modalTrigger2" class="fas fa-edit"></i>
                             </div>
                         </div>
                         <div class="features">
@@ -403,5 +403,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/css-base.js"></script>
+    <script src="/js/modals-manage-listing.js"></script>
 </body>
 </html>
