Added logic to '/js/form-validator-manage-listing.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/manage-listing.html
+++ b/BeginnersPad v2/lister/manage-listing.html
@@ -402,6 +402,7 @@
     <script src="/js/maps-view-listing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
     <script src="/js/nav-drawer.js"></script>
+    <script src="/js/form-validator-manage-listing.js"></script>
     <script src="/js/css-base.js"></script>
     <script src="/js/modals-manage-listing.js"></script>
 </body>
