--- a/BeginnersPad v2/admin/dashboard.html
+++ b/BeginnersPad v2/admin/dashboard.html
@@ -576,7 +576,7 @@
         document.querySelector('#link').readOnly = true;
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
-    <script src="/js/charts-admin-dashboard.js"></script>
+    <script src="/js/charts.js"></script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
