Added 'js/maps-view-listings.js.test' as a container file for Google Maps tests in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-my-listing.html
+++ b/BeginnersPad v2/lister/view-my-listing.html
@@ -573,7 +573,7 @@
         });
     </script>
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&libraries=places&callback=initPlaces">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&libraries=places,geometry&callback=initPlaces">
     </script>
     <script src="/js/maps-view-listing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
