Updated callback from 'initMap' to 'initPlaces' on all listing views references in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-listing-pending.html
+++ b/BeginnersPad v2/admin/manage-listing-pending.html
@@ -534,7 +534,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&libraries=places&callback=initMap">
     </script> -->
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&libraries=places,geometry&callback=initPlaces">
     </script>
     <script src="/js/maps-view-listing.js"></script>
     <script src="/js/nav-drawer.js"></script>
