--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -273,7 +273,7 @@
                         <input type="number" name="longitude" id="longitude">
                     </div>
                     <div class="form-group" id="zoneMap" style="height: 300px;margin: 15px 0;">
-                        <div id="map2" style="height: 100%;"></div>
+                        <div id="mapSubzone" style="height: 100%;"></div>
                     </div>
                     <div class="form-group" id="grpRadius">
                         <label for="radius">Radius (km)</label>
@@ -293,9 +293,9 @@
     </div>
     
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initZone">
     </script>
-    <script src="/js/maps-view-listing.js"></script>
+    <script src="/js/maps-zones.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
     <script src="/js/charts.js"></script>
     <script src="/js/nav-drawer.js"></script>
