Changed map javascript reference in '/admin/manage-sub-zone.html' to '/js/maps-zones.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-sub-zone.html
+++ b/BeginnersPad v2/admin/manage-sub-zone.html
@@ -385,9 +385,9 @@
     </section>
     
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initZone">
     </script>
-    <script src="/js/maps-view-listing.js"></script>
+    <script src="/js/maps-zones.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
     <script src="/js/charts.js"></script>
     <script src="/js/nav-drawer.js"></script>
