Changed map javascript reference in '/admin/manage-zones.html' to '/js/maps-zones.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -273,7 +273,7 @@
                         <input type="number" name="longitude" id="longitude">
                     </div>
                     <div class="form-group" id="zoneMap" style="height: 300px;margin: 15px 0;">
-                        <div id="mapSubzone" style="height: 100%;"></div>
+                        <div id="map2" style="height: 100%;"></div>
                     </div>
                     <div class="form-group" id="grpRadius">
                         <label for="radius">Radius (km)</label>
