--- a/BeginnersPad v2/admin/manage-zones.html
+++ b/BeginnersPad v2/admin/manage-zones.html
@@ -278,9 +278,9 @@
     </div>
     
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initZone">
     </script>
-    <script src="/js/maps-view-listing.js"></script>
+    <script src="/js/maps-zones.js"></script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/search-bar-scroll.js"></script>
     <script src="/js/form-validator-manage-zones.js"></script>
