--- a/BeginnersPad v2/admin/add-topic.html
+++ b/BeginnersPad v2/admin/add-topic.html
@@ -107,7 +107,24 @@
             </ul>
         </div>
     </div>
+
+    <h3 class="section-title">Add topic</h3>
+
+    <section>
+        <div class="container">
+            <form action="">
+                <div class="form-group">
+                    <input type="text" placeholder="Topic title" id="title">
+                </div>
+                <div class="form-group">
+                    <textarea id="editor" name="editor"></textarea>
+                </div>
+                <input class="btn btn-link btn-submit" type="button" id="btnSubmit" value="Submit">
+            </form>
+        </div>
+    </section>
     
+    <script src="https://cdn.ckeditor.com/ckeditor5/31.0.0/classic/ckeditor.js"></script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
