--- a/BeginnersPad v2/admin/add-topic.html
+++ b/BeginnersPad v2/admin/add-topic.html
@@ -112,12 +112,12 @@
 
     <section>
         <div class="container">
-            <form action="">
+            <form action="#" method="post">
                 <div class="form-group">
                     <input type="text" placeholder="Topic title" id="title">
                 </div>
                 <div class="form-group">
-                    <textarea id="editor" name="editor"></textarea>
+                    <textarea id="editor" name="editor" ></textarea>
                 </div>
                 <input class="btn btn-link btn-submit" type="button" id="btnSubmit" value="Submit">
             </form>
@@ -125,6 +125,7 @@
     </section>
     
     <script src="https://cdn.ckeditor.com/ckeditor5/31.0.0/classic/ckeditor.js"></script>
+    <script src="/js/ckeditor.js"></script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
